<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.shop.ShopFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cornerRadius="@dimen/_12sdp"
            android:textColor="@color/white"
            android:text="Hãy thiết lập cửa hàng của bạn"
            style="@style/GreenBuy.Button.Filled"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_shop_create"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <!-- Toolbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/main_color"
                app:title="Đăng ký cửa hàng"
                app:titleTextColor="@color/white"
                app:navigationIconTint="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:src="@drawable/avatar_blank"/>

        <ImageView
            android:id="@+id/ic_add"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@id/iv_avatar"
            android:src="@drawable/ic_add"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:paddingHorizontal="24dp">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@id/tl_name"
                android:layout_marginBottom="@dimen/_4sdp"
                android:textStyle="bold"
                android:text="@string/tai_khoan"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_username"
                style="@style/GreenBuy.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text|textNoSuggestions"
                    android:hint="Nhập tên của cửa hàng"
                    android:textColor="@color/black"
                    android:focusableInTouchMode="true"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tl_name"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="bold"
                android:text="@string/mat_khau"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tl_name"
                android:layout_marginTop="@dimen/_6sdp"
                style="@style/GreenBuy.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:hint="Nhập số điện thoại của cửa hàng"
                    android:textColor="@color/black"
                    android:inputType="text|textNoSuggestions"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tl_phone_number"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="bold"
                android:text="@string/mat_khau"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/cb_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tl_phone_number"
                android:layout_marginVertical="@dimen/_4sdp"
                android:textColor="@color/black"
                android:buttonTint="@color/main_color"
                android:text="@string/toi_dong_y_voi_cac_dieu_khoan_cua_greenbuy"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Đăng ký"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:padding="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/cb_register"
                style="@style/GreenBuy.Button.Filled"
                android:enabled="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_approve"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:text="ADMIN"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>